--- a/src/component/Content/Content.css
+++ b/src/component/Content/Content.css
@@ -5,7 +5,10 @@
 }
 
 .head-img {
-  background-image: url('https://images.unsplash.com/photo-1505935428862-770b6f24f629?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1647&q=80')
+  background-image: url('https://images.unsplash.com/photo-1505935428862-770b6f24f629?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1647&q=80');
+  background-repeat: space;
+  background-size: cover;
+  width: 100%;
 }
 
 .head-block {
